[metadata]
name = luyiba
version = attr: luyiba.__version__
description = 英雄联盟随机英雄选择器
url=https://github.com/a358003542/luyiba
long_description = file: README.md
long_description_content_type=text/markdown
author=wander
author_email=a358003542@outlook.com
maintainer=wander
maintainer_email=a358003542@outlook.com
license=MIT
keywords = python
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
install_requires =
    click
    diskcache
    requests
    my-fake-useragent>=0.2.0
    pyparsing
    pywander>=0.8.1

[options.packages.find]
exclude =
    tests
[options.entry_points]
console_scripts =
    luyiba = luyiba.__main__:main